AM_CPPFLAGS += \
               $(LTDLINCL)
headers += \
        mca/base/base.h \
        mca/base/mca_base_component_repository.h \
        mca/base/mca_base_param.h \
        mca/base/mca_base_param_internal.h

libocoms_la_SOURCES += \
        mca/base/mca_base_close.c \
        mca/base/mca_base_cmd_line.c \
        mca/base/mca_base_component_compare.c \
        mca/base/mca_base_component_find.c \
        mca/base/mca_base_component_repository.c \
        mca/base/mca_base_components_open.c \
        mca/base/mca_base_components_close.c \
        mca/base/mca_base_components_select.c \
        mca/base/mca_base_list.c \
        mca/base/mca_base_open.c \
        mca/base/mca_base_param.c \
        mca/base/mca_base_parse_paramfile.c
