AM_CPPFLAGS += \
               $(LTDLINCL)
headers += \
        mca/base/base.h \
        mca/base/mca_base_component_repository.h \
        mca/base/mca_base_var.h \
        mca/base/mca_base_pvar.h \
        mca/base/mca_base_var_enum.h \
        mca/base/mca_base_var_group.h \
        mca/base/mca_base_vari.h \
        mca/base/mca_base_framework.h

libocoms_la_SOURCES += \
        mca/base/mca_base_close.c \
        mca/base/mca_base_cmd_line.c \
        mca/base/mca_base_component_compare.c \
        mca/base/mca_base_component_find.c \
        mca/base/mca_base_component_repository.c \
        mca/base/mca_base_components_open.c \
        mca/base/mca_base_components_close.c \
        mca/base/mca_base_components_select.c \
        mca/base/mca_base_list.c \
        mca/base/mca_base_open.c \
        mca/base/mca_base_var.c \
        mca/base/mca_base_pvar.c \
        mca/base/mca_base_var_enum.c \
        mca/base/mca_base_var_group.c \
        mca/base/mca_base_parse_paramfile.c \
	    mca/base/mca_base_components_register.c \
	    mca/base/mca_base_framework.c
	
