#
# Copyright (c) 2004-2005 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2005 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart, 
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2010      Cisco Systems, Inc.  All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from opal/Makefile.am

headers += \
	service/sys/architecture.h \
	service/sys/atomic.h \
	service/sys/atomic_impl.h \
	service/sys/timer.h

include service/sys/alpha/Makefile.am
include service/sys/amd64/Makefile.am
include service/sys/arm/Makefile.am
include service/sys/ia32/Makefile.am
include service/sys/ia64/Makefile.am
include service/sys/mips/Makefile.am
include service/sys/powerpc/Makefile.am
include service/sys/sparc/Makefile.am
include service/sys/sparcv9/Makefile.am
include service/sys/win32/Makefile.am
